feat: expose employee total compensation
